@@ -1,3 +1,9 @@
+2003-08-24 John Fleck <jfleck@inkstain.net>
+
+	* rni18n.xml
+	placeholder for discussion of GNOME's translation
+	goodness
+
 2003-08-22 John Fleck <jfleck@inkstain.net>
 
 	add
